--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body
 	 background-color:black;
 	 min-height:100vh;
 	 width:100%;
-	 overflow:hidden;
 }
 
 header
@@ -21,7 +20,13 @@ header
 	color:white;
 	height: 80px;
 	align-items: center;
-	background-color: gray;
+	background-color: black;
+	animation: header 2s ease-in-out;
+}
+@keyframes header{
+	0%{
+		transform: translateY(-100%);
+	}
 }
 header h1:hover{
 	padding:10px 20px;
@@ -43,19 +48,25 @@ li:hover{
 .main{
 display: flex;
 width: 100%;
-height: 632px;
+height: 554px;
 }
 .content{
 width: 50%;
 color:white;
 margin-top: 10%;
 margin-left: 5%;
+animation: content 2s ease-in-out;
 }
+@keyframes content{
+	0%{
+		transform: translateX(-50%);
+	}
+}
+
 .main h1{
 	font-size: 80px;
 	margin-bottom: 20px;
 	letter-spacing: 5px;
-
 }
 .main h3{
 	font-size: 30px;
@@ -81,18 +92,28 @@ button:hover{
 }
 .image{
 	width: 50%;
-	margin-top: 7%;
+	margin-top: 8%;
+	z-index: -1;
 }
 img{
-	width: 50rem;
+	width: 40rem;
+	animation: car 5s ease-in-out;
 }
-footer{
+@keyframes car{
+	0%{
+		transform: translateX(100%);
+	}
+	100%{
+		transform: translateX(-220%);
+	}
+}
+/* footer{
 	display: flex;
 	align-items: center;
 	text-align: center;
 	height: 80px;
 	color: white;
-background-color: gray;
+background-color: black;
 }
 footer h1{
 	margin-left: 45%;
@@ -102,5 +123,41 @@ footer h1:hover{
 	padding:10px 20px;
 	background-color: red;
 	border-radius: 10px;
+} */
+@media screen and (max-width:1200px){
+	.content{
+		width: 100%;
+		text-align: center;
+	}
+	.image{
+		width: 100%;
+		position: absolute ;
+		bottom: -5%;
+		display: flex;
+		justify-content: center;
+	}
+	.img{
+		width: 20rem;
+	}
+	
+}
+@media screen and (max-width:576px){
+	.content{
+		width: 100%;
+		text-align: center;
+	}
+	.content h1{
+		margin-bottom: 5%;
+	}
+	.image{
+		width: 100%;
+		position: absolute ;
+		bottom: -5%;
+		display: flex;
+		justify-content: center;
+	}
+	.img{
+		width: 30rem;
+	}
 	
 }
